[package]
name = "kvs"
version = "0.1.0"
authors = ["vtta <vtta0124@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.12.0"
predicates = "1.0.2"
tempfile = "3.1.0"
walkdir = "2.3.1"
structopt = "0.3.8"
serde = "1.0.104"
serde_json = "1.0.45"
ron = "0.5.1"
bson = "0.14.0"
rand = "0.7.3"
failure = "0.1.6"
