[package]
name = "kvs"
version = "0.1.0"
authors = ["vtta <vtta0124@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.9"
bincode = "1.2.1"
serde = { version = "1.0.104", features = ["derive"] }
chrono = "0.4.10"
log = "0.4.8"
simplelog = "0.7.4"
sled = "0.31.0"
signal-hook = "0.1.13"

[dev-dependencies]
assert_cmd = "0.12.0"
criterion = "0.3.1"
predicates = "1.0.2"
rand = "0.7.3"
tempfile = "3.1.0"
walkdir = "2.3.1"
